--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/com/syntax/class11/Phone.java=UTF-8
 encoding//src/com/syntax/class11/PhoneObjects.java=UTF-8
+encoding//src/com/syntax/class12/HomeWork03.java=UTF-8
+encoding//src/com/syntax/class12/HomeWork03_Object.java=UTF-8
+encoding//src/com/syntax/class12/HomeWork04.java=UTF-8
