--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,6 @@ encoding//src/com/syntax/class11/PhoneObjects.java=UTF-8
 encoding//src/com/syntax/class12/HomeWork03.java=UTF-8
 encoding//src/com/syntax/class12/HomeWork03_Object.java=UTF-8
 encoding//src/com/syntax/class12/HomeWork04.java=UTF-8
+encoding//src/com/syntax/class13/HomeWork02.java=UTF-8
+encoding//src/com/syntax/class13/HomeWork03.java=UTF-8
+encoding//src/com/syntax/class13/Task.java=UTF-8
